force-app/main/default/objects/Other_Attachments__c/Other_Attachments__c.object-meta.xml
<CustomObject>
    <label>Other Attachments</label>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Other Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>