force-app/main/default/objects/Other_Attachments__c/fields/Attachment_Description__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Description__c</fullName>
    <label>Attachment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>