force-app/main/default/objects/Other_Attachments__c/fields/Attachment_FULL_URL__c.field-meta.xml
<CustomField>
    <fullName>Attachment_FULL_URL__c</fullName>
    <label>Attachment FULL URL</label>
    <type>Url</type>
</CustomField>