force-app/main/default/objects/Other_Attachments__c/fields/Attachment_Source__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Source__c</fullName>
    <label>Attachment Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>