force-app/main/default/objects/Other_Attachments__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Other Attachments</relationshipLabel>
    <relationshipName>Other_Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>