force-app/main/default/objects/Other_Attachments__c/fields/Unique_URL__c.field-meta.xml
<CustomField>
    <fullName>Unique_URL__c</fullName>
    <externalId>true</externalId>
    <label>Unique URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>